Fixes #389, action icons overlapping on Android when 3 actions

--- a/src/sass/listing/_table.scss
+++ b/src/sass/listing/_table.scss
@@ -35,7 +35,7 @@
 
 		// Many non-Chrome browsers need these to be a little wider than normal.  I gave it 4px extra
 		&.actions-2 { width: 46px; } 
-		&.actions-3 { width: 62px; }
+		&.actions-3 { width: 76px; }
 	}
 	td { // All cells are told to consume the full available width and ellipsis any leftover
 		width: 100%;
@@ -44,7 +44,6 @@
 	}
 	td:last-child {
 		text-align: right;
-		padding-left: 0;
 		overflow: visible; // Don't show ellipsis
 	}
 	td:first-child { // When there is only one row, this will supercede the above
@@ -123,11 +122,8 @@
 		margin: 0 2px;
 	}
 
-}
-
-// On small browsers, only show the second and last columns in tables
-@media (max-width: $screen-sm) {
-	.table {
+	// On small browsers, only show the second and last columns in tables
+	@media (max-width: $screen-sm) {
 
 		// Make title column wide again
 		&[class*='columns-'] th:first-child + th {
@@ -142,5 +138,13 @@
 			display: table-cell;
 		}	
 	}
+
+	// Remove some the actions padding on really small browsers
+	@media (max-width: $screen-xs) {
+		th:last-child, td:last-child {
+			padding-left: 0;
+		}
+	}
+
 }
 
